2005-05-04  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/task.c (rt_task_reply): Fix flowid check (as pointed
	out by Dmitry).

2005-05-01  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/task.c (rt_task_send, rt_task_receive,
	rt_task_reply): Add basic message passing primitives.

	* skins/rtai/task.h (rt_task_spawn): Add helper combining
	calls to rt_task_create() + rt_task_start().

2005-04-29  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/fpu.S: Fix compilation issue with
	CONFIG_PPC601_SYNC_FIX.

2005-04-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/pod.h (XNPOD_HEAPSIZE): Export this to the
	configuration interface.

2005-02-23  Jan Kiszka <kiszka@rts.uni-hannover.de>

	* include/nucleus/thread.h: Make sure that spare bits are defined
	in a section accessible from user-space applications.

2005-04-24  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/version.h: Add FUSION_VERSION() macro to mangle
	a version code from a major/minor/revision triplet.
	
	* include/nucleus/types.h: Stop shouting, rename ROOT_THREAD_*
	routines to lowercase versions.

2005-04-23  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h (xnarch_timer_thread): Use
	pthread_set_periodic_rt()/pthread_wait_period_rt() instead of
	nanosleep() to get a more accurate timeline.

2005-04-22  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_task_set_mode): Add T_PRIMARY bit to
	switch to primary/secondary mode (depends on this bit being set
	into setmask/clrmask).

	* skins/rtai/task.c (rt_task_set_mode): Accept T_SHIELD as we
	should.

	* include/nucleus/asm-generic/syscall.h: Add conforming domain
	exec bit, ensuring that calling shadows are switched to primary
	mode before entering the syscall, whilst the latter is fired over
	the Linux domain for regular Linux tasks.

	* skins/psos+/demos, skins/vxworks/demos: Create per-skin demo
	directory, illustrating the use of the RTOS emulators over the UVM
	and simulator engines.
